# merfish3d-analysis

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  LICENSE  README.md  exp_order.csv  generate_mtx_output.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  qi2lab.toml  run_postprocessing.py  sitemap.xml  test.csv  test_pixeldecode.py  test_round_alignment.py  typos.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
api/: index.html
contributing/: index.html
datastore/: index.html
docs/: api.md  api.rst  conf.py  contributing.md  datastore.md  index.md  index.rst  installation.md  introduction.rst  requirements.txt  viewer.md  workflow.md
docs/examples/: _zhuang_lab_mouse_brain.md  example1.md  qi2lab_human_olfactory_bulb.md  statphysbio_synthetic.md  zhuang_lab_mouse_brain.md
docs/reference/: index.md  merfish3danalysis.md
docs/reference/classes/: DataRegistration.md  PixelDecoder.md  qi2labDataStore.md
docs/reference/modules/: dataio.md  imageprocessing.md  opmtools.md  registration.md
examples/: Convert_simulation_to_qi2labzarr.py  Generate_MERFISH_coords_images.py  decode_simulated_data.py  determine_smFISH_threshold.py  extract_coordinates_msims.py  pp_qi2lab_OB.py  test_assign_smFISH_to_cells.py  test_filter_outlines.py  test_view_smFISH_assignment_results.py
examples/_zhuang_lab_mouse_brain/: index.html
examples/alexis_archive/: 16bitMHD4.txt  Convert_simulation_to_qi2labzarr.py  Generate_MERFISH_coords_images.py  SpotDecoder.py  _simulation.py  decode_simulated_data.py
examples/bioprotean_mouse/: 00_readme.txt  01_convert_to_datastore.py  02_register_and_deconvolve.py  03_cellpose_segmentation.py  03_cellpose_segmentation_v4.py  03_pixeldecode.py  04_pixeldecode.py  05_convert_transcripts_and_run_baysor.py  05_convert_transcripts_run_baysor.py  05_spatial_object.py  06_denoise_polydt.py  07_assign_cellpose_rois.py  convert_to_qi2lab.py
examples/bioprotean_smFISH/: 00_readme.txt  01_convert_to_datastore.py  02_register_and_deconvolve.py  03_cellpose_segmentation.py  04_full_all_channels.py  04_fuse_all_channels.py  05_view_fused.py  smFISH_decoding.py  smFISH_spot_detection.py
examples/human_OB_lightsheet/: convert_raw_to_qi2lab.py
examples/human_olfactorybulb/: 00_readme.txt  01_convert_to_datastore.py  02_register_and_deconvolve.py  03_cellpose_segmentation.py  04_pixeldecode_and_baysor.py  04_pixeldecode_qi2lab.py  05_correlation_with_bulk_RNAseq.py  06_cluster_spatial_results.py  07_build_and_export_scRNAseq_ref.py  08_jsta_resegmentation.py  _readme.txt  convert_to_qi2lab.py  pixeldecode_qi2lab.py  pp_qi2lab_OB.py  qi2lab_humanOB.toml  register_qi2lab.py  segment_polyDT_qi2lab.py
examples/mouse_brain_widefield/: pp_qi2lab_mousebrain.py
examples/notebooks/: Simulated_random_molecules.ipynb  Simulated_uniform_molecules.ipynb  Simulation_example.ipynb
examples/opm_human_olfactorybulb/: 00_readme.txt  01_convert_to_datastore.py  02_register.py
examples/qi2lab_human_olfactory_bulb/: index.html
examples/qi2lab_mouse/: 01_convert_to_datastore.py  02_register_and_deconvolve.py  03_cellpose_segmentation.py  04_pixeldecode.py  05_spatial_object.py  qi2lab_mouse.toml
examples/smFISH/: _readme.txt  convert_to_qi2lab.py  register_qi2lab.py  test_filter_outlines.py
examples/smFISH/old/: test_assign_smFISH_to_cells.py
examples/statphysbio_simulation/: pipeline.py
examples/statphysbio_synthetic/: 00_readme.txt  01_convert_simulation_to_experiment.py  02_convert_to_datastore.py  03_register_and_deconvolve.py  04_pixeldecode.py  05_calculate_F1.py  06_sweep_f1.py  06_test_f1.py  index.html
examples/synthetic_data/: convert_to_qi2lab.py  npy_data.py  pixel_decode.py  readme.txt  register_global.py  register_local.py
examples/zhuang_lab/: 00_readme.txt  00a_test_image_orientation.py  01_convert_to_qi2lab.py  01_test_image_orientation.py  02_register_and_deconvolve.py  03_cellpose_segmentation.py  04_pixel_decode.py  05_calculate_f1_score.py  05_one_tile_F1.py  compare_merlin_qi2lab.py  convert_to_qi2lab.py  pixel_decode.py  postprocess_zhuang_BIL.py  register_global.py  register_local.py
examples/zhuang_lab_mouse_brain/: index.html
installation/: index.html
reference/: index.html  merfish3danalysis.md  utils.md
reference/classes/DataRegistration/: index.html
reference/classes/PixelDecoder/: index.html
reference/classes/qi2labDataStore/: index.html
reference/modules/dataio/: index.html
reference/modules/imageprocessing/: index.html
reference/modules/opmtools/: index.html
reference/modules/registration/: index.html
scripts/: compare_zstride_proseg_f1.py  run_proseg_max_proj_zstride_decode_runs.sh  run_zstride_proseg_f1_analysis.sh
search/: search_index.json
src/merfish3d-analysis/postprocess/: _registration.py
src/merfish3d-analysis/utils/: _outlinesprocessing.py
src/merfish3danalysis/: .pre-commit-config.yaml  DataRegistration.py  PixelDecoder.py  __init__.py  qi2labDataStore.py  run_baysor.py  setup_colab.py  setup_cuda.py  setup_merfish3d.py  viewer.py
src/merfish3danalysis/converters/: bifish_simulation.py  qi2lab_microscope.py
src/merfish3danalysis/postprocess/: DataRegistration.py  PixelDecoder.py  _registration.py  baysor_config.toml  postprocess.py
src/merfish3danalysis/utils/: __init__.py  _dataio.py  _opmtools.py  (+13 more)
src/wf_merfish/: __init__.py  evaluate_round_alignment.py  microsam_segment_one_tile.py  run_localization.py  run_postprocessing.py  setup_and_run_localization_automated.py  test_adaptive_filter.py  test_alexisdecoding.py  test_data.py  test_pixeldecode.py  visualize_alexisdecoding_results.py  visualize_registered_spots.py
tests/: __init__.py  benchmark_preprocess_pyinstrument.py  conftest.py  test_PixelDecoder.py  test_chromatic_estimator.py  test_decode_warping.py  test_fuseall.py  test_pixeldecoder_coordinates.py  test_qi2lab_datastore_compat.py  test_qi2lab_viewer.py  test_reg.py  test_simulation_example_pipeline.py  test_sofima_deformable_registration.py  test_viewer.py  test_zstrided_decode_runs.py
viewer/: index.html
workflow/: index.html
(+62 files in other folders)
