# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "merfish3d-analysis"
description = "GPU-accelerated MERFISH processing"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { email = "douglas.shepherd@asu.edu", name = "Douglas Shepherd" },
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: BSD License"
]
dynamic = ["version"]
dependencies = ["typer"]
    
[tool.hatch.version]
path = "src/merfish3danalysis/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.ruff]
ignore = ["E402"]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-minify-plugin",
    "mkdocs-mermaid2-plugin"
]

[project.urls]
Source = "https://github.com/qi2lab/merfish3d-analysis"
Tracker = "https://github.com/qi2lab/merfish3d-analysis/issues"

[project.scripts]
setup-merfish3d = "merfish3danalysis.setup_merfish3d:main"
setup-colab = "merfish3danalysis.setup_colab:main"
sim-convert = "merfish3danalysis.cli.statphysbio_simulation.convert_simulation_to_experiment:main"
sim-datastore = "merfish3danalysis.cli.statphysbio_simulation.convert_to_datastore:main"
sim-preprocess = "merfish3danalysis.cli.statphysbio_simulation.register_and_deconvolve:main"
sim-decode = "merfish3danalysis.cli.statphysbio_simulation.pixeldecode:main"
sim-f1score = "merfish3danalysis.cli.statphysbio_simulation.calculate_F1:main"
sim-buildfigure = "merfish3danalysis.cli.statphysbio_simulation.calculate_F1:main"
qi2lab-datastore = "merfish3danalysis.cli.qi2lab_microscopes.create_datastore:main"
qi2lab-preprocess = "merfish3danalysis.cli.qi2lab_microscopes.preprocess:main"
qi2lab-globalregister = "merfish3danalysis.cli.qi2lab_microscopes.global_register:main"
qi2lab-segment = "merfish3danalysis.cli.qi2lab_microscopes.segment_polydT:main"
qi2lab-decode = "merfish3danalysis.cli.qi2lab_microscopes.pixeldecode:main"
qi2lb-anndata = "merfish3danalysis.cli.qi2lab_microscopes.anndata:main"